# ai-invest-quant

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: demo_config.json
dashboard/: app.py
data/samples/: sample_etf_prices.csv
docs/: ARCHITECTURE.md  DATA_GUIDE.md  DEMO_GUIDE.md  PROJECT_STATUS.md  REAL_DATA_GUIDE.md  ROADMAP.md
scripts/: run_demo.py
src/ai_invest_quant/: __init__.py  cli.py
src/ai_invest_quant/assets/: __init__.py  watchlist.py
src/ai_invest_quant/backtest/: __init__.py  broker.py  engine.py
src/ai_invest_quant/config/: __init__.py  experiment_config.py
src/ai_invest_quant/data/: __init__.py  adapters.py  cleaner.py  constants.py  loader.py  multi_csv.py  quality_report.py  validator.py
tests/: test_backtest_engine.py  test_benchmark.py  test_broker.py  test_cli.py  test_dashboard_files.py  test_data_adapters.py  test_data_cleaner.py  test_data_constants.py  test_data_loader.py  test_data_validator.py  test_docs.py  test_etf_rotation.py  test_experiment_config.py  test_indicators_returns.py  test_indicators_trend.py  test_markdown_report.py  test_metadata.py  test_multi_csv.py  test_oos.py  test_package_metadata.py  test_performance_metrics.py  test_performance_utils.py  test_pipeline_demo.py  test_portfolio.py  test_quality_report.py  test_risk_manager.py  test_run_compare.py  test_run_demo_script.py  test_run_id.py  test_run_index.py  test_run_loader.py  test_sensitivity.py  test_strategy_interface.py  test_tooling.py  test_walk_forward.py  test_watchlist.py
(+25 files in other folders)
