[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-invest-quant"
version = "0.3.1"
description = "AI-assisted ETF rotation backtesting MVP"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "streamlit",
  "ruff",
]

[project.scripts]
ai-invest-quant = "ai_invest_quant.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_invest_quant*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
